cmake_minimum_required(VERSION 3.17)
project(DSALAB C)

set(CMAKE_C_STANDARD 11)

add_executable(DSALAB main.c "Assignment1/Question I.h" "Assignment1/Question D.h" "Assignment1/Question H.h" "Assignment1/Question F.h" "Assignment1/Question C.h" "Assignment1/Question B.h" "Assignment1/Question A.h" "Assignment1/Question E.h" "Assignment1/Question G.h" "Assignment1/Question J.h" "Assignment0/Question A.h")